--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <input type="text" id="verification" required>
                 <span id="verificationQuestion"></span>
             </div>
-            <button type="submit" id = "submitbutton">Login</button>
+            <button type="submit" id = "submitbutton">Sign in</button>
         </form>
     </div>
     <script src="index.js"></script>
