--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Psyapy - Sign up</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div class="container">
